--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
+    <link rel="icon" href="icon.png">
+
     <style>
         body {
             font-family: 'Kanit', sans-serif;
